# threat-gdg-adk

./: LICENSE  Makefile  README.md  do-stuff.ps1  pyproject.toml  setup_videos.py  setup_windows.ps1  test_sensors.py  test_single_video.py
app/: api.py  complete_pipeline.py  comprehensive_pipeline.py  comprehensive_pipeline_auto.py  full_pipeline.py  real_video_pipeline.py  server.py  simple_pipeline.py  single_analysis.py
app/agents/: orchestrator_agent.py  sensor_agent.py  vision_agent.py
app/sensors/: simulator.py
app/temporal/: query_agent.py  vector_store.py
app/video/: enhanced_frame_extractor.py  full_video_analyzer.py  real_video_processor.py  vision_analyzer.py
deployment/terraform/dev/vars/: env.tfvars
frontend/: Dashboard.jsx
home-threat-detection/: .env.sample  .gitignore  README.md  requirements.txt  setup.ps1
home-threat-detection/home-threat-detection/: Makefile  pyproject.toml
home-threat-detection/home-threat-detection/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
home-threat-detection/home-threat-detection/app/: pipeline.py  server.py
home-threat-detection/home-threat-detection/app/agents/: orchestrator_agent.py  sensor_agent.py  vision_agent.py
home-threat-detection/home-threat-detection/app/sensors/: models.py  simulator.py  simulators.py
home-threat-detection/home-threat-detection/app/utils/: tracing.py  typing.py
home-threat-detection/home-threat-detection/app/video/: frame_extractor.py
home-threat-detection/home-threat-detection/app/video_processing/: frame_extractor.py
home-threat-detection/home-threat-detection/deployment/terraform/: variables.tf
home-threat-detection/home-threat-detection/deployment/terraform/dev/: variables.tf
home-threat-detection/home-threat-detection/deployment/terraform/vars/: env.tfvars
